--- a/TestAzureMVCWebAPP/TestAzureMVCWebAPP/Views/Home/Index.cshtml
+++ b/TestAzureMVCWebAPP/TestAzureMVCWebAPP/Views/Home/Index.cshtml
@@ -7,4 +7,5 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <p>this project is now in github and attched to AzureDevops </p>
     <h2>Edit 1</h2>
+    <h2>Edit 2</h2>
 </div>
